syntax = "proto3";

option go_package = "user/proto";

package user;

service UserService {
    rpc Health(HealthCheckRequest) returns (HealthCheckResponse);
    rpc GetUsers(UserRequest) returns (UserResponse);
    rpc GetUserById(UserRequest) returns (UserResponse);
    rpc SaveUser(UserRequest) returns (UserResponse);
}

message UserRequest {
    string user_name = 1;
    string user_email = 2;
    string user_password = 3;    
}

message UserResponse {
    string user_id = 1;
    string user_name = 2;
    string user_email = 3;
    string user_password = 4; 
}


message HealthCheckRequest {
    string message = 1;
}

message HealthCheckResponse {
    string message = 1;
}
